Revision history for Perl module CPAN::Reporter::Smoker

0.07

    - Changed: progress message -- added blank line before to help it stand out
      as lines of text scroll by on the console; added localtime() timestamp
      to help users tell how long a test has been running (e.g hung?)

    - Documented: cache purge happens when indices are checked for new distros

0.06 Thu Mar  6 10:12:26 EST 2008

    - Added documentation on using distroprefs to skip building and testing
      certain distributions

    - Edited other usage hints for clarity

0.05 Tue Feb 26 22:56:12 EST 2008

    - Smoker now periodically checks for new distributions; added
      "restart_delay" option (default 12 hours) to control frequency
    
    - Added support for CPAN cache scanning on start and at each restart (if
      configured in CPAN::Config)
    
    - Changed invocation of CPAN so trust_test_report_history option will work

    - Skips Bundles and mod_perl

0.04 Mon Feb  4 11:51:16 EST 2008

    - Quick fix of broken distribution (added missing prereq and restored
      a private function that was mistakenly deleted)

0.03 Mon Feb  4 11:23:43 EST 2008

    - Vastly improved logic for selecting distributions to test

    - Test suite confirms smoke tester picks up a developer version
      (still could be improved)
    
0.02 Mon Jan 28 11:55:35 EST 2008

    - Added rudimentary test of smoke testing

    - Updated prerequisites

0.01_02 Mon Jan 21 19:28:58 EST 2008

    - Added support for smoking developer releases 

0.01_01 Sun Jan 20 22:55:20 EST 2008

    - initial alpha release