@@ -184,7 +184,7 @@ to "no" in your CPAN::Reporter config file.
 
      cc_author = no
 
-=head2 CPAN::Mini
+=head2 Using a local CPAN::Mini mirror
 
 Because distributions must be retrieved from a CPAN mirror, the smoker may
 cause heavy network load and will reptitively download common build 
@@ -222,11 +222,42 @@ enough.
 Warning -- on Win32, terminating processes via the command_timeout is equivalent to
 SIGKILL and could cause system instability or later deadlocks
 
+=head2 Avoiding repetitive prerequisite testing
+
+Because CPAN::Reporter::Smoker satisfies all requirements from scratch, common
+dependencies (e.g. Class::Accessor) will be unpacked, built and tested 
+repeatedly.
+
+As of version 1.92_56, CPAN supports the C<<< trust_test_report_history >>> config
+option.  When set, CPAN will check the last test report for a distribution.
+If one is found, the results of that test are used instead of running tests
+again.
+
+     $ cpan
+     cpan> o conf init trust_test_report_history
+     cpan> o conf commit
+
+=head2 Stopping early if a prerequisite fails
+
+Normally, CPAN.pm continues testing a distribution even if a prequisite fails
+to build or fails testing.  Some distributions may pass their tests even
+without a listed prerequisite, but most just fail (and CPAN::Reporter discards
+failures if prerequisites are not met).
+
+As of version 1.92_57, CPAN supports the C<<< halt_on_failure >>> config option.
+When set, a prerequisite failure stops further processing.
+
+     $ cpan
+     cpan> o conf init halt_on_failure
+     cpan> o conf commit
+
 =head2 CPAN cache bloat
 
-CPAN will use a lot of scratch space to download, build and test modules.  
-Use CPAN's built-in cache management configuration to let it purge the cache 
-periodically if you don't want to do this manually.
+CPAN will use a lot of scratch space to download, build and test modules.  Use
+CPAN's built-in cache management configuration to let it purge the cache
+periodically if you don't want to do this manually.  When configured, the cache
+will be purged on start and whenever CPAN::Reporter::Smoker checks indices for
+new modules.  See the C<<< restart_delay >>> option for the C<<< start() >>> function. 
 
      $ cpan
      cpan> o conf init build_cache scan_cache
